fix(Table): Fix the issue with the scrollbar-color property causing incorrect width calculations.

--- a/components/Table/style/index.less
+++ b/components/Table/style/index.less
@@ -560,7 +560,7 @@
   }
 
   &-header {
-    scrollbar-color: transparent transparent;
+    scrollbar-color: inherit;
     background-color: @table-color-bg-header-cell;
 
     &::-webkit-scrollbar {
@@ -742,7 +742,7 @@
     width: 100%;
     overflow-x: scroll;
     background-color: @table-color-bg-tfoot;
-    scrollbar-color: transparent transparent;
+    scrollbar-color: inherit;
     position: relative;
     z-index: 1;
     box-shadow: 0 -@table-border-width 0 @table-color-border;
